Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/wiki.css
	modified:   javascript/wiki/wiki.js
	new file:   json/showdown/showdownConfig.json
	new file:   showdown/dist/showdown.js
	new file:   showdown/dist/showdown.js.map
	new file:   showdown/dist/showdown.min.js
	new file:   showdown/dist/showdown.min.js.map
	modified:   wiki.html
	modified:   "wiki/\344\270\255\345\234\213.md"
	modified:   "wiki/\346\200\247\345\210\245\345\233\233\345\205\203\350\253\226.md"
	renamed:    98 copy.html -> "\350\251\246\351\251\227/98 copy.html"
	renamed:    98.html -> "\350\251\246\351\251\227/98.html"
	new file:   "\350\251\246\351\251\227/\350\251\246\351\251\227Table.html"

終於！！！！！！！！！！！！！！
把配置文件弄出來了！！！！！！！！！！！！

--- a/wiki/中國.md
+++ b/wiki/中國.md
@@ -1,15 +1,26 @@
-# :=&CHINA-FLAG=: 中國
+<!--- ICON:"/assets/絵文字/CHINA-FLAG.png" ---->
 
----
+# 中國 :=&CHINA-FLAG=:
 
 ### **中華人民共和國**（**中華人民共和國**：the People's Republic of China）
 
-簡稱--中國--
+簡稱『-中國-』
 
 位東亞太平洋西岸　社會主義國家　首都北京
 
---工人階級--領導　--工農聯盟--爲基　的--人民民主專政--社會主義國家
+『-工人階級-』 領導　 『-工農聯盟-』 爲基　的『-人民民主專政-』社會主義國家
 
-多民族國家：漢族主體，共--五十六--民族
+多民族國家：漢族主體，共 『-五十六-』 民族
 
-陸地面積約--<全角=690=全角>--萬
+同<全角=14=全角>國接壤\spc <全角=8=全角>國海上相鄰
+
+<全角=23=全角>省\spc<全角=5=全角>自治區\spc<全角=4=全角>直轄市 \spc <全角=2=全角>特別行政區
+
+#### 主要宗教：
+
+-   道教
+-   佛教
+-   回教
+-   基督教
+    -   天主教
+    -   新教
