Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   "assets/GIFs/\346\210\221\347\232\204\345\234\226\345\206\212/funny-internet-animated-gif-13.gif"
	new file:   "assets/GIFs/\346\210\221\347\232\204\345\234\226\345\206\212/immortal_blashyrkh.gif"
	new file:   "assets/GIFs/\346\210\221\347\232\204\345\234\226\345\206\212/mk60illIWp1qdrzxno1_500.gif"
	new file:   "assets/GIFs/\346\210\221\347\232\204\345\234\226\345\206\212/suckmonscreen.gif"
	new file:   "assets/GIFs/\346\210\221\347\232\204\345\234\226\345\206\212/tumblr_nn3ens52cR1qza1qzo1_500.gif"
	new file:   "assets/GIFs/\346\210\221\347\232\204\345\234\226\345\206\212/wind.gif"
	new file:   "assets/GIFs/\346\210\221\347\232\204\345\234\226\345\206\212/\346\210\221\347\232\204\345\234\226\345\206\212BG.gif"
	modified:   "assets/\346\227\245\350\252\214.txt"
	modified:   css/index.css
	modified:   css/wiki.css
	modified:   "css/\346\210\221\347\232\204\345\234\226\345\206\212.css"
	modified:   "fonts/\351\226\271\345\211\262unifont-Medium.woff2"
	modified:   javascript/wiki/wiki.js
	modified:   "javascript/\345\205\254\345\205\261/\345\245\275\345\244\232\345\207\275\346\225\270\357\274\201.js"
	modified:   "javascript/\345\205\254\345\205\261/\347\265\265\346\226\207\345\255\227.js"
	modified:   "javascript/\345\205\254\345\205\261/\350\261\216\346\216\222\347\254\246\350\231\237.js"
	modified:   "javascript/\346\210\221\347\232\204\345\234\226\345\206\212/\346\210\221\347\232\204\345\234\226\345\206\212.js"
	modified:   "javascript/\346\227\245\350\252\214/\345\207\246\347\220\206\346\226\207\346\234\254.js"
	new file:   "json/wiki/wiki\347\233\256\351\214\204.json"
	modified:   "json/\345\205\254\345\205\261/\345\234\226\350\261\241\347\264\242\345\274\225.json"
	modified:   wiki.html
	modified:   "wiki/\346\200\247\345\210\245\345\

--- a/wiki/性別四元論.md
+++ b/wiki/性別四元論.md
@@ -4,17 +4,22 @@
 
 > 我提出的詞彙，可能有雷同
 
-其實沒啥好解釋的：
+（單指生理性別）
 
-| Tables        | Are           | Cool  |
-| ------------- |:-------------:| -----:|
-| **col 3 is**  | right-aligned | $1600 |
-| col 2 is      | *centered*    |   $12 |
-| zebra stripes | ~~are neat~~  |    $1 |
-
-
-Column A | Column B | Column C
----------|----------|---------
- A1 | B1 | C1
- A2 | B2 | C2
- A3 | B3 | C3
+<table>
+    <tr>
+        <th><i>人出生時<i></th>
+        <th>有男性器</th>
+        <th>无男性器</th>
+    </tr>
+    <tr>
+        <th>有女性器</th>
+        <td>雙姓人</td>
+        <td>純女人</td>
+    </tr>
+    <tr>
+        <th>无女性器</th>
+        <td>純男人</td>
+        <td>无性人</td>
+    </tr>
+</table>
