Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   "assets/\344\210\216\351\235\242\345\234\226\346\250\231/erase_file-0.ico"
	deleted:    "assets/\344\210\216\351\235\242\345\234\226\346\250\231/wiki/red.svg"
	modified:   css/index.css
	modified:   "fonts/\351\226\271\345\211\262unifont-Medium.woff2"
	modified:   index.html
	modified:   javascript/index/index.js
	modified:   javascript/wiki/wiki.js
	modified:   "javascript/\345\205\254\345\205\261/\347\247\201\347\224\250\345\255\227.js"
	modified:   "json/\345\205\254\345\205\261/\345\234\226\350\261\241\347\264\242\345\274\225.json"
	modified:   "wiki/\345\214\243\346\261\241\347\263\273.md"
	modified:   "wiki/\346\200\247\345\210\245\345\233\233\345\205\203\350\253\226.md"

--- a/wiki/匣污系.md
+++ b/wiki/匣污系.md
@@ -1,3 +1,7 @@
 <!--- ICON:"data:image/svg+xml,%3Csvg%20width=%221%22%20height=%221%22%20xmlns=%22http://www.w3.org/2000/svg%22%3E%3Crect%20width=%221%22%20height=%221%22%20fill=%22%23FF0000%22/%3E%3C/svg%3E" ---->
 
 # 匣污系
+
+> 提示：此詞條爲作者原創
+
+自己創造的:=藝$0=:術風格
