Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/wiki.css
	modified:   "fonts/\351\226\271\345\211\262unifont-Medium.woff2"
	modified:   javascript/wiki/wiki.js
	modified:   "json/wiki/wiki\347\233\256\351\214\204.json"
	modified:   wiki.html
	new file:   "wiki/\345\226\256\345\255\227/\345\245\263\347\234\237\346\226\207/\356\264\260.md"
	new file:   "wiki/\345\226\256\345\255\227/\345\245\263\347\234\237\346\226\207/\357\201\234.md"
	new file:   "wiki/\345\226\256\345\255\227/\345\245\263\347\234\237\346\226\207/\357\204\266.md"
	new file:   "wiki/\345\226\256\345\255\227/\350\245\277\345\244\217\346\226\207/\360\227\274\207.md"
	new file:   "wiki/\345\226\256\345\255\227/\350\245\277\345\244\217\346\226\207/\360\230\235\236.md"
	new file:   "wiki/\345\226\256\345\255\227/\360\241\250\270\345\226\203/\343\227\202.md"
	modified:   "wiki/\345\226\256\345\255\227/\360\254\202\244.md"
	renamed:    "wiki/\345\226\256\350\251\236/\363\260\234\200\363\260\234\201\363\260\234\202.md" -> "wiki/\345\226\256\350\251\236/\345\245\263\347\234\237\346\226\207/\356\264\260\357\204\266\357\201\234.md"
	new file:   "wiki/\345\226\256\350\251\236/\350\245\277\345\244\217\346\226\207/\360\227\274\207\360\230\235\236.md"
	new file:   "wiki/\345\226\256\350\251\236/\360\241\250\270\345\226\203/\343\227\202\350\266\212.md"
	new file:   "wiki/\345\226\256\350\251\236/\360\241\250\270\345\226\203/\360\241\250\270\345\226\203.md"

--- a/wiki/單字/𬂤.md
+++ b/wiki/單字/𬂤.md
@@ -1,8 +1,14 @@
 # :=藝$0=:
 
+## 簡介
+
 > 資源解釋來自[字統网](https://zi.tools/zi/%F0%AC%82%A4)
 
 我認爲的比較好的「藝」的簡化字
 
 ![𬂴](assets/wiki/單字/𬂤-md/𬂴字形篆書春秋石鼓文0.png "𬂴")
 _𬂴_
+
+## 編碼
+
+統一碼：`u2C0A4`
