--- a/wiki/單詞/女真文/.md
+++ b/wiki/單詞/女真文/.md
@@ -1,6 +1,7 @@
-# 󰜀󰜁󰜂
+# 
 
 ## 簡介
+
 用
 [女真文](https://zh.wikipedia.org/wiki/%E5%A5%B3%E7%9C%9F%E6%96%87)
 寫的「女真文」
@@ -9,11 +10,6 @@
 
 ## 編碼
 
-我這裏是自己作的字型，因爲沒考慮太多所以隨意放的碼位
-`uF0700` `uF0701` `uF0702`
+我用的[古今文字集成](http://ccamc.org/)相同編碼
 
-```js
-def = {
-	asdf
-}
-```
+`uED30` `uF136` `uF05C`
