wiki 性別四元論 更新

--- a/wiki/性別四元論.md
+++ b/wiki/性別四元論.md
@@ -8,17 +8,17 @@
 
 <table>
     <tr>
-        <th><i>人出生時<i></th>
-        <th>有男性器</th>
-        <th>无男性器</th>
+        <th><i>出生時<i></th>
+        <th>有牡器</th>
+        <th>无牡器</th>
     </tr>
     <tr>
-        <th>有女性器</th>
+        <th>有牝器</th>
         <td>雙姓人</td>
         <td>純女人</td>
     </tr>
     <tr>
-        <th>无女性器</th>
+        <th>无牝器</th>
         <td>純男人</td>
         <td>无性人</td>
     </tr>
